2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: we aren't guaranteed that the item
	  is a FrameworkElement now so add in some debug spew for
	  cases where we add DataContext based bindings on
	  DependencyObjects (like brushes).

2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewNode.cs: If the CollectionViewNode is given an
	  actual ICollectionView, we need to attach handlers to the
	  CurrentChanged event too.

	* PropertyPathWalker.cs: Only the final node cares about
	  whether it binds directly to the view or not.

	* StandardCollectionView.cs: We should raise the
	  CollectionChanged event before calling MoveCurrentTo
	  otherwise we might confuse things which have bound to the
	  collection.

	* BindingExpressionBase.cs: If we're binding to the
	  datacontext we have to use the view itself, not the current
	  item.

2010-05-28  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: We now use the 'force' variable
	  in MoveCurrentTo to indicate whether we should emit the
	  CurrentChanging/CurrentChanged events regardless of whether
	  the item is actually changing. This is needed because
	  calling Refresh on the ICV always emits the events.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Revert this change as it breaks
	  moon-units. The DRT must be fixed a different way..

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathWalker.cs: An empty binding ( {Binding} ) means
	  that we bind directly to the ICollectionView if it exists.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* CollectionView.cs: Implement the IComparer<object> interface
	  on CollectionView to keep the DRTs happy. It gives the wrong
	  results though...

	* StandardCollectionView.cs: We raise the changing events if
	  either the item or position has changed.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* PropertyComparer.cs: If there are no sort descriptions,